# yolov8_tensorrt_cpp

./: CMakeLists.txt  README.md
py/: export.py  predict.py
src/: yolo_detector.cpp  yolo_detector.h
